--- a/solakat.css
+++ b/solakat.css
@@ -794,8 +794,15 @@ div{
 /* Mobile Phone: */
 @media only screen and (max-width: 360px) { 
 	.header{
-		padding: 15px 0px 0px 20px;
+		padding: 15px 20px;
 		background-color: #ffffff;
+	}
+	.mobile-right{
+		float: right;
+		position: inline block;
+	}
+	.mobile-left{
+		float: left;
 	}
 	.menu-holder{
 		padding: 30px 0px 30px 50px;
@@ -812,8 +819,11 @@ div{
 	.second-section h1{
 		font-size: 30px;
 	}
+	.third-section-wrap{
+		padding: 20px;
+	}
 	.third-section{
-		width: calc(100% - 20px);
+		width: 100%;
 		margin: 10px 0;
 	}
 	.fourth-section-wrap{
@@ -852,27 +862,27 @@ div{
 		margin: 0;
 	}
 	.fifth-section-wrap .work1{
-		width: calc(100% - 20px);
+		width: 100%;
 		height: 200px;
 		margin: 10px 0;
 	}
 	.fifth-section-wrap .work2{
-		width: calc(100% - 20px);
+		width: 100%;
 		height: 200px;
 		margin: 10px 0;
 	}
 	.sixth-section-wrap .work3{
-		width: calc(100% - 20px);	height: 200px;
+		width: 100%;
 		height: 200px;
 		margin: 10px 0;
 	}
 	.seventh-section-wrap .work4{
-		width: calc(100% - 20px);
+		width: 100%;
 		height: 200px;
 		margin: 10px 0;
 	}
 	.seventh-section-wrap .work5{
-		width: calc(100% - 20px);
+		width: 100%;
 		height: 200px;
 		margin: 10px 0;
 	}
@@ -880,12 +890,11 @@ div{
 		padding: 0 25px; 
 	}
 	.ninth-section-wrap{
-		padding: 30px 25px;
+		text-align: center;
+		padding: 30px 20px;
 	}
 	.ninth-section-wrap img{
 		width: 25%;
-		height: 50px;
-		margin: 20px 25px;
 	} 
 	.testimony1-wrap img{
 		width: 80%;
@@ -932,7 +941,7 @@ div{
 		font-size: 16px;
 	}
 	.form-wrap{
-		padding: 20px 0;
+		padding: 30px 0;
 	}
 	.input-mail input{
 		width: 50%;
